adding font and space

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik+Vinyl&display=swap');
 div {
     max-width: 1600px;
 }
@@ -5,9 +6,10 @@ div {
     margin: 0 auto;
 }
 nav a {
-    text-align: center;
-    color:   #ffffff;
     text-decoration: none;
+    color:   #ffffff;
+    text-align: center;
+    padding: 35px;
 }
 #hero-msg h1 {
     text-align: center;
@@ -21,11 +23,24 @@ nav a {
 main section {
     text-align: center;
 }
+.card-img {
+    border: 10px solid #7598c5;
+}
+main section img {
+    box-sizing: border-box;
+} 
 #background {
     height: 725px;
 }
 body {
     background-color: #ffffff;
+    font-family: 'Roboto','Rubik Vinyl',Helvetica;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color:  #396E94;
@@ -34,15 +49,14 @@ nav a:hover {
     background-color:#7598c5;
     color:  #0c57a4;
 }
-.book {
+.book, .join {
     background-color: #0C57A4; 
     color:  #ffffff;
     text-decoration: none;
-}
-.join {
-    background-color:  #0C57A4; 
-    color: #ffffff;
-    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover {
     background-color: #87A7CA;
@@ -55,6 +69,8 @@ nav a:hover {
 }
 .msg {
     background-color: #7598C5;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer {
     background-color:#396E94;
@@ -62,14 +78,21 @@ footer {
 .logo {
     width: 80px;
 }
+#logo_link {
+    padding-top: 5px;
+}  
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
 }
 .home-title {
     color:#396E94;
+    font-family: 'Rubik Vinyl', 'Roboto', Helvetica;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color:#396E94;
@@ -79,6 +102,7 @@ h4 {
 }
 .msg p {
     color: #0C57A4;
+    padding-bottom: 15px;
 }
 footer h3 {
     color: #0C57A4;
@@ -93,3 +117,13 @@ footer a:hover {
 footer h3 a {
     text-decoration: underline;
 }
+footer {
+    padding: 25px 50px;
+    margin-top: 200px;
+}  
+footer .social img {
+    padding-top: 15px;
+}  
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}   
