--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,37 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik+Vinyl&display=swap');
-div {
-    max-width: 1600px;
-}
-#content {
-    margin: 0 auto;
-}
-nav a {
-    text-decoration: none;
-    color:   #ffffff;
-    text-align: center;
-    padding: 35px;
-}
-#hero-msg h1 {
-    text-align: center;
-}
-#hero-msg h4 {
-    text-align: center;
-}
-.button-box {
-    text-align: center;
-}
-main section {
-    text-align: center;
-}
-.card-img {
-    border: 10px solid #7598c5;
-}
-main section img {
-    box-sizing: border-box;
-} 
-#background {
-    height: 725px;
-}
 body {
     background-color: #ffffff;
     font-family: 'Roboto','Rubik Vinyl',Helvetica;
@@ -44,58 +11,91 @@ h2 {
 }
 header {
     background-color:  #396E94;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-evenly;
 }
 nav a:hover {
     background-color:#7598c5;
     color:  #0c57a4;
 }
+.home-grid {
+    padding:1em 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 .book, .join {
     background-color: #0C57A4; 
     color:  #ffffff;
     text-decoration: none;
-    font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
+    font-size: 18px;
     border-radius: 5px;
 }
-.book:hover {
-    background-color: #87A7CA;
+.book:hover, .join:hover   {
+    background-color:  #ffffff;
+    color: #87A7CA;
 }
-.join:hover {
-    background-color:#87A7CA;
+div.content {
+    max-width: 1600px;
+    margin: 0 auto;
 }
-#background {
-    background-color:  #436096;
-}
-.msg {
-    background-color: #7598C5;
-    line-height: 1.5em;
+nav a {
+    text-align: center;
+    color:   #ffffff;
+    text-decoration: none;
     padding: 35px;
 }
-footer {
-    background-color:#396E94;
-}
-.logo {
-    width: 80px;
-}
-#logo_link {
-    padding-top: 5px;
-}  
-.icon {
-    width: 80px;
-    padding-top: 10px;
-}
-#hero-img {
-    width: 100%;
-}
 .home-title {
-    color:#396E94;
-    font-family: 'Rubik Vinyl', 'Roboto', Helvetica;
-    font-size: 2em;
+    color:#87A7CA;
     margin-top: 10px;
+    font-family: 'Rubik Vinyl', 'Roboto', 'Helvetica';
+    font-size: 2em;
 }
 h4 {
     color:#396E94;
+}
+#hero-msg h1, #hero-msg h4  {
+    text-align: center;
+}
+.button-box {
+    text-align: center;
+}
+main section {
+    text-align: center;
+}
+#background {
+    height: 725px;
+    background-color:  #436096;
+    margin: 0px;
+    padding:35px;
+}
+.msg {
+    background-color: #7598C5;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #396E94;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3; 
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .msg h2 {
     color:#0C57A4; 
@@ -106,6 +106,7 @@ h4 {
 }
 footer h3 {
     color: #0C57A4;
+    text-decoration: underline;
 }
 footer a {
     color: #ffffff;
@@ -113,17 +114,119 @@ footer a {
 }
 footer a:hover {
     color:#0C57A4;
-}
-footer h3 a {
     text-decoration: underline;
 }
+.logo {
+    width: 80px;
+}
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}  
 footer {
     padding: 25px 50px;
     margin-top: 200px;
-}  
+    background-color:#396E94;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+} 
 footer .social img {
     padding-top: 15px;
 }  
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
-}   
+} 
+.card-img {
+    border: 10px solid #7598c5;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #87A7CA;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+main section img {
+    box-sizing: border-box;
+} 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: #7598c5;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #0C57A4;
+}
+#hero-img {
+    width: 100%;
+}
+footer h3 a {
+    text-decoration: underline;
+}  
+.card-img, .mountains {
+    width: 100%;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #0C57A4;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+                 
