--- a/artistconnect/styles/site-plan.css
+++ b/artistconnect/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('grid_12-825-55-15.css');
+@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Open+Sans&family=Poppins:wght@300&family=Quattrocento&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -17,13 +17,13 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #142414 ;  /* headlines on a white background */ 
   --headline-color-on-color: #C85B5A; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #2C2C1C; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #844C44; /* paragraph text on a colored background */ 
-  --paragraph-background-color: white ;
+  --paragraph-color-on-white: #0C2814; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #C85B5A; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #142414 ;
   --nav-link-color: #664138;
   --nav-background-color: #2C1414;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #080D07;
+  --nav-hover-link-color: #080D07;
+  --nav-hover-background-color: #664138;
 }
 
 
