--- a/about-me/styles/styles.css
+++ b/about-me/styles/styles.css
@@ -1,3 +1,6 @@
+main {
+    max-width: 840px;
+}
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -41,7 +44,7 @@ aside img{
 }
 
 footer{
-    margin-top: 1em;
+    margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
 }
