--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,7 +12,8 @@ body {
   background-color:var(--background-color);
   color:var(--main-text-color);
   margin: 0;
-  padding-left: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
  h1, h2 {
@@ -24,9 +25,7 @@ body {
 p {
   font-family:'Roboto', sans-serif;
   color: var(--main-text-color);
-  padding: 1em;
   font-size: 1.5rem;
-  margin: 0;
 }
 
 nav {
@@ -49,27 +48,29 @@ nav a:visited {
 h1, 
 #hero {
   position: relative;
+  width: 100%;
+  height: 100%;
   text-align: center;
   color: var(--main-text-color);
-  top: -840px;
-  padding: 1px;
+  top: -680px;
   border: 1px solid var(--main-text-color);
   background-color: rgba(204, 227, 226, 0.484);
-  height: 100px;
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: -20px;
-  margin-bottom: -20px; /* Adjust margin to remove space */
-  padding-right: 50px;
+}
+
+.hero > img:first-child:not(article img) {
+  width: 100%;
+  margin-bottom: -250px;
 }
 
 article{
   position: relative;
-  width: 85%;
+  width: 80%;
   margin:auto;
-  top: -800px;
+  top: -670px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -77,36 +78,19 @@ article{
   border: 1px solid var(--main-text-color);
   background-color: rgba(173, 216, 230, 0.5);
   height: auto;
-  margin-bottom: 0;
 }
 
 article img {
   float:right;
   width: 20%;
-  margin-top: 20px;
-  margin-left: 1%;
-  margin-right: auto;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 article p {
   width: 70%; 
   margin-right: 25%; 
   margin-top: 20px;
-}
-
-section {
-  margin-top: 0; 
-  padding-top: 0; 
-}
-
-section h2 {
-  margin-top: 0; /* Remove top margin for h2 */
-}
-
-section p {
-  margin-bottom: 0; /* Remove bottom margin for p */
-}
-
-section img {
-  margin-top: 0; /* Remove top margin for img */
 }
