--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,18 +10,22 @@ body{
     font-size: 16px;
     font-family: 'Lato', 'Poppins', 'Roboto', sans-serif;
 }
-main {
-    max-width: 840px;
-}
+
 nav {
     background-color: steelblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     padding: 10px;
     display: block;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 h1 {
@@ -71,7 +75,6 @@ footer{
     text-align: center;
 }
 
-/* Class Selectors */
 .box{
     margin: 1rem;
     border: 1px solid rgba(0,0,0,.1);
@@ -82,4 +85,26 @@ footer{
 
 .indent {
     padding-left: 1rem;
+}
+
+header.grid, footer.grid {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
