--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins&family=Roboto&display=swap');
 
+body{
+    font-size: 16px;
+    font-family: 'Lato', 'Poppins', 'Roboto', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    font-size: 16px;
-    font-family: 'Lato', 'Poppins', 'Roboto', sans-serif;
 }
 
 nav {
@@ -32,14 +32,20 @@ h1 {
     color: steelblue;
 }
 
+h2 {
+    color: blueviolet;
+}
+
 main img{
-    width: 110px;
+    width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 3px;
     box-shadow: 0 0 30px gray;
     float: right;
-    margin: 0 0 1rem 1rem;
+    margin: -7rem 1rem 0.5rem 1rem;
+    margin-top: -9%;
+    
 }
 
 p{
@@ -87,9 +93,10 @@ footer{
     padding-left: 1rem;
 }
 
-header.grid, footer.grid {
-    max-width: 840px;
+header.grid,
+footer.grid {
     margin: 0 auto;
+    max-width: 840px;
 }
 
 .grid {
