--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -22,16 +22,22 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.container .quiz-title {
+.quiz-title {
   text-align: center;
   color: var(--heading-color);
   font-size: 34px;
+  margin-bottom: 20px;
+
+}
+
+.question {
+  margin-bottom: 20px;
 }
 
 label {
   display: block;
-  margin-bottom: 10px;
-  color: var(--main-text-color);
+  margin-bottom: 5px;
+  color: var(--heading-color);
 }
 
 input[type="text"],
@@ -42,8 +48,8 @@ select {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin-bottom: 15px;
   box-sizing: border-box;
+  margin-bottom: 20px;
   color: var(--main-text-color);
 }
 
@@ -56,11 +62,11 @@ button[type="submit"] {
   color: #fff;
   border: none;
   padding: 15px 30px;
-  border-radius: 5px;
+  border-radius: 25px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   display: block;
-  margin: 20px auto;
+  margin: 20px auto 0;
 }
 
 button[type="submit"]:hover {
