--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -284,7 +284,7 @@ footer p {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: var(--background-color) 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 
 .contact-form button[type="submit"]:hover {
