--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,34 +1,25 @@
-
-/* if you are using any Google fonts change the font names below to your fonts. 
-Any spaces in your font name should be replaced with a +. 
-Fonts are separated by a & */ 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik+Vinyl&display=swap');
 
 :root {
-  /* change the values below to your colors from your palette */
   --primary-color:#616894;
   --secondary-color: #ccd4e3 ;
   --accent1-color: #436096;
   --accent2-color: #9494b3;
 
-  /* change the values below to your chosen font(s) */
   --heading-font: "Rubik Vinyl";
   --paragraph-font: 'Roboto', Helvetica, sans-serif;
 
-  /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+
+  --headline-color-on-white: #396E94;
+  --headline-color-on-color: white;
+  --paragraph-color-on-white: #396E94;
+  --paragraph-color-on-color: white;
   --paragraph-background-color: #396E94;
   --nav-link-color: #ffffff;
   --nav-background-color: #616894;
   --nav-hover-link-color: #7598c5;
   --nav-hover-background-color: #ccd4e3;
 }
-
-
-/*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
   max-width: 960px;
